--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, viewport-fit=cover">
-        <title>トランジットグループ｜TRANSIT GROUP</title>
+        <title>REWRITE HOLDINGS</title>
         <meta name='robots' content='max-image-preview:large'/>
         <style>
             img:is([sizes="auto" i], [sizes^="auto," i]) {
