--- a/index.html
+++ b/index.html
@@ -3453,7 +3453,7 @@
                                                                                             </div>
                                                                                             <div class="smb-section__body is-layout-constrained wp-block-section-is-layout-constrained">
                                                                                                 <h3 class="wp-block-heading">年商100億円ステージへ</h3>
-                                                                                                <p>トランジットグループは、クリエイティブ、オペレーション、イベント、マネージメントサポートといった様々なプロフェッショナル集団が連動し、“ワクワク体験”ができる「遊び場」を提供。新しいライフスタイルを創り、文化やコミュニティが活性化する事で、社会にポジティブな変化をもたらす未来を目指しています。</p>
+                                                                                                <!-- <p>トランジットグループは、クリエイティブ、オペレーション、イベント、マネージメントサポートといった様々なプロフェッショナル集団が連動し、“ワクワク体験”ができる「遊び場」を提供。新しいライフスタイルを創り、文化やコミュニティが活性化する事で、社会にポジティブな変化をもたらす未来を目指しています。</p> -->
                                                                                                 <div class="wp-block-snow-monkey-blocks-buttons smb-buttons is-content-justification-right is-layout-flex wp-container-snow-monkey-blocks-buttons-is-layout-2 wp-block-buttons-is-layout-flex">
                                                                                                     <div class="wp-block-snow-monkey-blocks-btn smb-btn-wrapper is-style-text thd_mod-arw__link --large">
                                                                                                         <a class="smb-btn" href="https://www.transit-web.com/company/vision/">
