--- a/company/mission.html
+++ b/company/mission.html
@@ -15,10 +15,10 @@
     <div class="header-all">
         <div class="header-upper">
             <div class="header-logo">
-                <a class=header-logo href="../index.html"><img src="img/logo.jpg" alt="" height="50px"></a>
+                <a class=header-logo href="../index.html"><img src="../img/logo.jpg" alt="" height="50px"></a>
                 <p class="logo-text">株式会社リライトホールディングス</p> 
             </div>
-            <!-- <span class="material-icons" id="open-btn">menu</span> -->
+            <span class="material-icons" id="open-btn">menu</span>
             <span class="material-icons" id="close-btn"
               >close</span
             >
@@ -26,11 +26,6 @@
 
 
          <!-- ハンバーガーメニューのアイコン -->
-
-         <div class="hamburger material-icons" id="open-btn">
-          <span></span>
-          <span></span>
-        </div>
 
         <nav class="header-under">
             <div class="index">
@@ -43,7 +38,7 @@
                 <ul>
                     <li>
                         <div class="accordion">
-                        <a class="index-text" href="../company.html">● 企業情報 <span class="index-text-english">Company Info</span>
+                        <a class="index-text" href="../company.html">企業情報 <span class="index-text-english">Company Info</span>
                         </a>
                         <button class="toggle-btn">＋</button>
                         </div>
@@ -71,7 +66,7 @@
                 <ul>
                     <li>
                         <div class="accordion">
-                        <a class="index-text"  href="../adoption.html">採用情報 <span class="index-text-english">Careers</span>
+                        <a class="index-text"  href="../adoption.html">採用情報<span class="index-text-english"> Careers</span>
                         </a>
                         <button class="toggle-btn">＋</button>
                     </div>
@@ -183,19 +178,6 @@
       </main>
       <footer>
         <div class="footer-upper">
-            <ul class="footer-index top">
-                <li>
-                    <div class="accordion accordion-top">
-                        <a class="circle">
-                            ●　
-                        </a>
-                        <a class="index-text" href="../index.html">
-                            <!-- <span class="circle"></span> -->
-                            ホーム <span class="index-text-english"> Home</span>
-                        </a>
-                        </div>
-                </li>
-            </ul>
         <ul class="footer-index">
             <li>
                 <div class="accordion">
@@ -227,7 +209,7 @@
         <ul class="footer-index">
             <li>
                 <div class="accordion">
-                <a class="index-text"  href="../adoption.html">採用情報<span class="index-text-english"> Recruit</span>
+                <a class="index-text"  href="../adoption.html">採用情報<span class="index-text-english"> Careers</span>
                 </a>
                 <button class="toggle-btn">＋</button>
             </div>
@@ -254,11 +236,8 @@
         </ul>
     </div>
         <div class="copyright-tab">
-            <a href="#"><img src="../img/logo-background-none.png" alt=""></a><br>
-            <div class="copyright-main">
-                <small class="copyright">&copy; REWRITE HOLDINGS all rights reserved.</small>
-  
-            </div>
+            <a href="#"><img src="../img/logo.jpg" alt=""></a><br>
+            <small class="copyright">&copy; REWRITE HOLDINGS all rights reserved.</small>
         </div>
     </footer>
       <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
