--- a/contact/adoption.html
+++ b/contact/adoption.html
@@ -178,85 +178,69 @@
     </main>
 
     <footer>
-      <div class="footer-upper">
-          <ul class="footer-index top">
-              <li>
-                  <div class="accordion accordion-top">
-                      <a class="circle">
-                          ●　
-                      </a>
-                      <a class="index-text" href="../index.html">
-                          <!-- <span class="circle"></span> -->
-                          ホーム <span class="index-text-english"> Home</span>
-                      </a>
-                      </div>
-              </li>
-          </ul>
-      <ul class="footer-index">
-          <li>
-              <div class="accordion">
-              <a class="index-text" href="../company.html">企業情報 <span class="index-text-english">Company Info</span>
-              </a>
-              <button class="toggle-btn">＋</button>
-              </div>
-                      <div class="accordion-content">
-                          <a href="../company/message.html" class="index-more">-グループCEOメッセージ</a>
-                          <a href="../company/mission.html" class="index-more">-グループミッション・経営理念</a>
-                          <a href="../company/summary.html" class="index-more">-会社概要</a>
-                          <a href="../company/partnar.html" class="index-more">-提携先企業一覧</a>
-                        </div>
-          </li>
-      </ul>
-      <ul class="footer-index">
-          <li>
-              <div class="accordion">
-              <a class="index-text"  href="../business.html">事業内容 <span class="index-text-english">Business Description </span>
-              </a>
-              <button class="toggle-btn">＋</button>
-         </div>
-              <div class="accordion-content">
-                  <a href="../business/holdings.html" class="index-more">-ホールディングス事業</a>
-                  <a href="../business/group.html" class="index-more">-グループ会社紹介</a>
+        <div class="footer-upper">
+        <ul class="footer-index">
+            <li>
+                <div class="accordion">
+                <a class="index-text" href="../company.html">企業情報 <span class="index-text-english">Company Info</span>
+                </a>
+                <button class="toggle-btn">＋</button>
                 </div>
-          </li>
-      </ul>
-      <ul class="footer-index">
-          <li>
-              <div class="accordion">
-              <a class="index-text"  href="../adoption.html">採用情報<span class="index-text-english"> Recruit</span>
-              </a>
-              <button class="toggle-btn">＋</button>
-          </div>
-                  <div class="accordion-content">
-                      <a href="../adoption/executive.html" class="index-more">-経営幹部採用</a>
-                      <a href="../adoption/employee.html" class="index-more">-社員採用</a>
-                      <a href="../adoption/part.html" class="index-more">-アルバイト採用</a>
-                    </div>
-          </li>
-      </ul>
-      <ul class="footer-index">
-          <li>
-              <div class="accordion">
-              <a class="index-text"  href="../contact.html">お問い合わせ <span class="index-text-english">Contact</span></a>
-              <button class="toggle-btn">＋</button>
-          </div>
-                  <div class="accordion-content">
-                      <a href="../contact/interviw.html" class="index-more">-会社、取材に関するお問い合わせ</a>
-                      <a href="../contact/adoption.html" class="index-more">-採用に関するお問い合わせ</a>
-                      <a href="../contact/cooperation.html" class="index-more">-業務提携に関するお問い合わせ</a>
-                      <a href="../contact/sales.html" class="index-more">-営業の方はこちら</a>
-                    </div>
-          </li>
-      </ul>
-  </div>
-      <div class="copyright-tab">
-          <a href="#"><img src="../img/logo-background-none.png" alt=""></a><br>
-          <div class="copyright-main">
-              <small class="copyright">&copy; REWRITE HOLDINGS all rights reserved.</small>
-
-          </div>
-      </div>
-  </footer>
+                        <div class="accordion-content">
+                            <a href="../company/message.html" class="index-more">-グループCEOメッセージ</a>
+                            <a href="../company/mission.html" class="index-more">-グループミッション・経営理念</a>
+                            <a href="../company/summary.html" class="index-more">-会社概要</a>
+                            <a href="../company/partnar.html" class="index-more">-提携先企業一覧</a>
+                          </div>
+            </li>
+        </ul>
+        <ul class="footer-index">
+            <li>
+                <div class="accordion">
+                <a class="index-text"  href="../business.html">事業内容 <span class="index-text-english">Business Description </span>
+                </a>
+                <button class="toggle-btn">＋</button>
+           </div>
+                <div class="accordion-content">
+                    <a href="../business/holdings.html" class="index-more">-ホールディングス事業</a>
+                    <a href="../business/group.html" class="index-more">-グループ会社紹介</a>
+                  </div>
+            </li>
+        </ul>
+        <ul class="footer-index">
+            <li>
+                <div class="accordion">
+                <a class="index-text"  href="../adoption.html">採用情報<span class="index-text-english"> Careers</span>
+                </a>
+                <button class="toggle-btn">＋</button>
+            </div>
+                    <div class="accordion-content">
+                        <a href="../adoption/executive.html" class="index-more">-経営幹部採用</a>
+                        <a href="../adoption/employee.html" class="index-more">-社員採用</a>
+                        <a href="../adoption/part.html" class="index-more">-アルバイト採用</a>
+                      </div>
+            </li>
+        </ul>
+        <ul class="footer-index">
+            <li>
+                <div class="accordion">
+                <a class="index-text"  href="../contact.html">お問い合わせ <span class="index-text-english">Contact</span></a>
+                <button class="toggle-btn">＋</button>
+            </div>
+                    <div class="accordion-content">
+                        <a href="../contact/interviw.html" class="index-more">-会社、取材に関するお問い合わせ</a>
+                        <a href="../contact/adoption.html" class="index-more">-採用に関するお問い合わせ</a>
+                        <a href="../contact/cooperation.html" class="index-more">-業務提携に関するお問い合わせ</a>
+                        <a href="../contact/sales.html" class="index-more">-営業の方はこちら</a>
+                      </div>
+            </li>
+        </ul>
+    </div>
+        <div class="copyright-tab">
+            <a href="#"><img src="../img/logo.jpg" alt=""></a><br>
+            <small class="copyright">&copy; REWRITE HOLDINGS all rights reserved.</small>
+        </div>
+    </footer>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
 <script src="../js/main.js"></script>
