--- a/business.html
+++ b/business.html
@@ -9,6 +9,7 @@
     rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <title>事業紹介</title>
+    <link rel="icon" href="img/Rewrite_logo_only.png" type="image/png">
     </head>
     <body>
       <header>
