--- a/adoption.html
+++ b/adoption.html
@@ -9,6 +9,7 @@
     rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <title>REWRITE HOLDINGS</title>
+    <link rel="icon" href="img/Rewrite_logo_only.png" type="image/png">
 </head>
 <body>
     <section>
