--- a/company.html
+++ b/company.html
@@ -8,6 +8,7 @@
     rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <title>企業情報</title>
+    <link rel="icon" href="img/Rewrite_logo_only.png" type="image/png">
 </head>
 <body>
   <header>
