--- a/company/message.html
+++ b/company/message.html
@@ -9,6 +9,8 @@
     rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
     <title>CEO メッセージ</title>
+    <link rel="icon" href="../img/Rewrite_logo_only.png" type="image/png">
+    </head>
 <body>
   <header>
     <div class="header-all">
@@ -17,7 +19,7 @@
                 <a class=header-logo href="../index.html"><img src="../img/logo.jpg" alt="" height="50px"></a>
                 <p class="logo-text">株式会社リライトホールディングス</p> 
             </div>
-            <span class="material-icons" id="open-btn">menu</span>
+            <!-- <span class="material-icons" id="open-btn">menu</span> -->
             <span class="material-icons" id="close-btn"
               >close</span
             >
@@ -26,18 +28,23 @@
 
          <!-- ハンバーガーメニューのアイコン -->
 
+         <div class="hamburger material-icons" id="open-btn">
+          <span></span>
+          <span></span>
+        </div>
+
         <nav class="header-under">
             <div class="index">
                 <ul class="top">
                     <li>
-                        <a class="index-text" href="../index.html">トップ <span class="index-text-english"> Top</span>
+                        <a class="index-text" href="../index.html">ホーム <span class="index-text-english"> Home</span>
                             </a>
                     </li>
                 </ul>
                 <ul>
                     <li>
                         <div class="accordion">
-                        <a class="index-text" href="../company.html">企業情報 <span class="index-text-english">Company Info</span>
+                        <a class="index-text" href="../company.html">● 企業情報 <span class="index-text-english">Company Info</span>
                         </a>
                         <button class="toggle-btn">＋</button>
                         </div>
@@ -65,7 +72,7 @@
                 <ul>
                     <li>
                         <div class="accordion">
-                        <a class="index-text"  href="../adoption.html">採用情報<span class="index-text-english"> Careers</span>
+                        <a class="index-text"  href="../adoption.html">採用情報 <span class="index-text-english">Careers</span>
                         </a>
                         <button class="toggle-btn">＋</button>
                     </div>
@@ -111,7 +118,7 @@
         <div class="m-breadcrumb">
           <ul class="m-breadcrumb__list">
             <li class="m-breadcrumb__listItem">
-              <a href="/">トップ</a>
+              <a href="/">ホーム</a>
             </li>
             <li class="m-breadcrumb__listItem">
               <a href="/company/">企業情報</a>
@@ -175,6 +182,19 @@
       </main>
       <footer>
         <div class="footer-upper">
+            <ul class="footer-index top">
+                <li>
+                    <div class="accordion accordion-top">
+                        <a class="circle">
+                            ●　
+                        </a>
+                        <a class="index-text" href="../index.html">
+                            <!-- <span class="circle"></span> -->
+                            ホーム <span class="index-text-english"> Home</span>
+                        </a>
+                        </div>
+                </li>
+            </ul>
         <ul class="footer-index">
             <li>
                 <div class="accordion">
@@ -206,7 +226,7 @@
         <ul class="footer-index">
             <li>
                 <div class="accordion">
-                <a class="index-text"  href="../adoption.html">採用情報<span class="index-text-english"> Careers</span>
+                <a class="index-text"  href="../adoption.html">採用情報<span class="index-text-english"> Recruit</span>
                 </a>
                 <button class="toggle-btn">＋</button>
             </div>
@@ -233,12 +253,15 @@
         </ul>
     </div>
         <div class="copyright-tab">
-            <a href="#"><img src="../img/logo.jpg" alt=""></a><br>
-            <small class="copyright">&copy; REWRITE HOLDINGS all rights reserved.</small>
+            <a href="#"><img src="../img/logo-background-none.png" alt=""></a><br>
+            <div class="copyright-main">
+                <small class="copyright">&copy; REWRITE HOLDINGS all rights reserved.</small>
+  
+            </div>
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
     <script src="../js/main.js"></script>
 <script src="../js/script.js"></script>
 </body>
-</head>
+</html>
