--- a/contact/sales.html
+++ b/contact/sales.html
@@ -10,6 +10,7 @@
       rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
     <title>営業に関するお問い合わせ</title>
+    <link rel="icon" href="../img/Rewrite_logo_only.png" type="image/png">
 </head>
 <body>
     <header>
@@ -32,7 +33,7 @@
                 <div class="index">
                     <ul class="top">
                         <li>
-                            <a class="index-text" href="../index.html">トップ <span class="index-text-english"> Top</span>
+                            <a class="index-text" href="../index.html">ホーム <span class="index-text-english"> Home</span>
                                 </a>
                         </li>
                     </ul>
