--- a/inquiry.html
+++ b/inquiry.html
@@ -9,6 +9,7 @@
     rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <title>採用情報</title>
+    <link rel="icon" href="img/Rewrite_logo_only.png" type="image/png">
     </head>
     <body>
         <header>
