--- a/index.html
+++ b/index.html
@@ -3603,7 +3603,7 @@
                                                                             <p>新しいライフスタイルを創る TRANSIT Group は、一緒に成長できるメンバーを募集しています。私たちと一緒にさまざまな国、都市、人々に刺激を受けながら、これまでなかった文化を持ち込み、発展させませんか？</p>
                                                                             <div class="wp-block-snow-monkey-blocks-buttons smb-buttons is-content-justification-right is-layout-flex wp-container-snow-monkey-blocks-buttons-is-layout-6 wp-block-buttons-is-layout-flex">
                                                                                 <div class="wp-block-snow-monkey-blocks-btn smb-btn-wrapper is-style-text thd_mod-arw__link --large">
-                                                                                    <a class="smb-btn" href="adoption/">
+                                                                                    <a class="smb-btn" href="adoption.html">
                                                                                         <span class="smb-btn__label">採用情報を見る</span>
                                                                                     </a>
                                                                                 </div>
