--- a/business/group.html
+++ b/business/group.html
@@ -49,7 +49,7 @@
                             <button class="toggle-btn">＋</button>
                             </div>
                                     <div class="accordion-content">
-                                        <a href="../company/message.html" class="index-more">-グループCEOメッセージ</a>
+                                        <a href="../company/message.html" class="index-more">-グループ代表挨拶</a>
                                         <a href="../company/mission.html" class="index-more">-グループミッション・経営理念</a>
                                         <a href="../company/summary.html" class="index-more">-会社概要</a>
                                         <a href="../company/partnar.html" class="index-more">-提携先企業一覧</a>
@@ -72,7 +72,7 @@
                     <ul>
                         <li>
                             <div class="accordion">
-                            <a class="index-text"  href="../adoption.html">採用情報 <span class="index-text-english">Careers</span>
+                            <a class="index-text"  href="../adoption.html">採用情報 <span class="index-text-english">Recruit</span>
                             </a>
                             <button class="toggle-btn">＋</button>
                         </div>
@@ -150,12 +150,85 @@
                             </div>				
                         	</div>
                             </a>
-                            <div class="group-name">
+                            <!-- <div class="group-name">
                                 <p>
                                     株式会社Walk
                                 </p>
-                            </div>
+                            </div> -->
                         </li>                                             
+                        <li class="p-group__listItem">
+                            <a class="m-circleBtn-element" href="https://walk-ynwa.com/">
+                                <div class="p-group__listItemBlock">
+                                    <div class="p-group__listLogo p-group__listLogo--01">
+                                    <img loading="lazy" decoding="async" src="https://placehold.jp/150x150.png" alt="">								</div>
+
+                                <div class="p-group__listImg">
+                                <img loading="lazy" decoding="async" src="https://placehold.jp/150x150.png" alt="">		
+                                <!-- <div class="m-circleBtn small arrow-black"><span></span></div> -->
+                            </div>				
+                        	</div>
+                            </a>
+                            <!-- <div class="group-name">
+                                <p>
+                                    株式会社Walk
+                                </p>
+                            </div> -->
+                        </li>                                             
+                        <li class="p-group__listItem">
+                            <a class="m-circleBtn-element" href="https://walk-ynwa.com/">
+                                <div class="p-group__listItemBlock">
+                                    <div class="p-group__listLogo p-group__listLogo--01">
+                                    <img loading="lazy" decoding="async" src="../img/company/active-no.png" alt="">								</div>
+
+                                <div class="p-group__listImg">
+                                <img loading="lazy" decoding="async" src="https://placehold.jp/150x150.png" alt="">		
+                                <!-- <div class="m-circleBtn small arrow-black"><span></span></div> -->
+                            </div>				
+                        	</div>
+                            </a>
+                            <!-- <div class="group-name">
+                                <p>
+                                    株式会社Walk
+                                </p>
+                            </div> -->
+                        </li>                                             
+                        <li class="p-group__listItem">
+                            <a class="m-circleBtn-element" href="https://walk-ynwa.com/">
+                                <div class="p-group__listItemBlock">
+                                    <div class="p-group__listLogo p-group__listLogo--01">
+                                    <img loading="lazy" decoding="async" src="../img/company/financial.webp" alt="">								</div>
+
+                                <div class="p-group__listImg">
+                                <img loading="lazy" decoding="async" src="https://placehold.jp/150x150.png" alt="">		
+                                <!-- <div class="m-circleBtn small arrow-black"><span></span></div> -->
+                            </div>				
+                        	</div>
+                            </a>
+                            <!-- <div class="group-name">
+                                <p>
+                                    株式会社Walk
+                                </p>
+                            </div> -->
+                        </li>                                             
+                        <li class="p-group__listItem">
+                            <a class="m-circleBtn-element" href="https://walk-ynwa.com/">
+                                <div class="p-group__listItemBlock">
+                                    <div class="p-group__listLogo p-group__listLogo--01">
+                                    <img loading="lazy" decoding="async" src="https://placehold.jp/150x150.png" alt="">								</div>
+
+                                <div class="p-group__listImg">
+                                <img loading="lazy" decoding="async" src="https://placehold.jp/150x150.png" alt="">		
+                                <!-- <div class="m-circleBtn small arrow-black"><span></span></div> -->
+                            </div>				
+                        	</div>
+                            </a>
+                            <!-- <div class="group-name">
+                                <p>
+                                    株式会社Walk
+                                </p>
+                            </div> -->
+                        </li>                                             
+                                                     
                          <!-- <li class="p-group__listItem">
                             <a class="m-circleBtn-element" href="https://walk-ynwa.com/">
                                 <div class="p-group__listItemBlock">
@@ -194,11 +267,11 @@
                                     <!-- <div class="m-circleBtn small arrow-black"><span></span></div> -->
                                 </div>
                             </a>
-                            <div class="group-name">
+                            <!-- <div class="group-name">
                                 <p>
                                     リライトメディカルクリニック
                                 </p>
-                            </div>
+                            </div> -->
                         </li>
                         <li class="p-group__listItem">
                             <a class="m-circleBtn-element" href="#">
@@ -208,11 +281,11 @@
                                     <!-- <div class="m-circleBtn small arrow-black"><span></span></div> -->
                                 </div>
                             </a>
-                            <div class="group-name">
+                            <!-- <div class="group-name">
                                 <p>
                                     株式会社RELAPIS
                                 </p>
-                            </div>
+                            </div> -->
                         </li>
                                             <li class="p-group__listItem">
                             <a class="m-circleBtn-element" href="http://matsuda-partners.jp/">
@@ -222,11 +295,11 @@
                                     <!-- <div class="m-circleBtn small arrow-black"><span></span></div> -->
                                 </div>
                             </a>
-                            <div class="group-name">
+                            <!-- <div class="group-name">
                                 <p>
                                     リライト公認会計士・税理士事務所
                                 </p>
-                            </div>
+                            </div> -->
                         </li>
                         <li class="p-group__listItem">
         <a class="m-circleBtn-element" href="https://activeoffice.tokyo/">
@@ -236,11 +309,11 @@
                 <!-- <div class="m-circleBtn small arrow-black"><span></span></div> -->
             </div>
         </a>
-        <div class="group-name">
+        <!-- <div class="group-name">
             <p>
                 アクティブ司法書士事務所
             </p>
-        </div>
+        </div> -->
     </li>
     <li class="p-group__listItem">
 <a class="m-circleBtn-element" href="https://shibahara-consultant.com/">
@@ -250,11 +323,11 @@
 <!-- <div class="m-circleBtn small arrow-black"><span></span></div> -->
 </div>
 </a>
-<div class="group-name">
+<!-- <div class="group-name">
 <p>
 リライト社労士事務所
 </p>
-</div>
+</div> -->
 </li>
                                             <li class="p-group__listItem">
                             <a class="m-circleBtn-element" href="https://financialservice.co.jp/">
@@ -264,12 +337,12 @@
                                     <!-- <div class="m-circleBtn small arrow-black"><span></span></div> -->
                                 </div>
                             </a>
-                            <div class="group-name">
+                            <!-- <div class="group-name">
                                 <p>
                                     株式会社ファイナンシャルサービスホールディングス
 
                                 </p>
-                            </div>
+                            </div> -->
                         </li>
                                             <!-- <li class="p-group__listItem">
                             <a class="m-circleBtn-element" href="https://www.createrestaurants.com/business/group/yuzuru/">
@@ -440,7 +513,7 @@
                 <button class="toggle-btn">＋</button>
                 </div>
                         <div class="accordion-content">
-                            <a href="../company/message.html" class="index-more">-グループCEOメッセージ</a>
+                            <a href="../company/message.html" class="index-more">-グループ代表挨拶</a>
                             <a href="../company/mission.html" class="index-more">-グループミッション・経営理念</a>
                             <a href="../company/summary.html" class="index-more">-会社概要</a>
                             <a href="../company/partnar.html" class="index-more">-提携先企業一覧</a>
