--- a/index.html
+++ b/index.html
@@ -3154,7 +3154,7 @@
                                     <button class="toggle-btn">＋</button>
                                     </div>
                                             <div class="accordion-content">
-                                                <a href="company/message.html" class="index-more">-グループCEOメッセージ</a>
+                                                <a href="company/message.html" class="index-more">-グループ代表挨拶</a>
                                                 <a href="company/mission.html" class="index-more">-グループミッション・経営理念</a>
                                                 <a href="company/summary.html" class="index-more">-会社概要</a>
                                                 <a href="company/partnar.html" class="index-more">-提携先企業一覧</a>
@@ -3177,7 +3177,7 @@
                             <ul>
                                 <li>
                                     <div class="accordion">
-                                    <a class="index-text"  href="adoption.html">採用情報 <span class="index-text-english">Careers</span>
+                                    <a class="index-text"  href="adoption.html">採用情報 <span class="index-text-english">Recruit</span>
                                     </a>
                                     <button class="toggle-btn">＋</button>
                                 </div>
@@ -3599,8 +3599,8 @@
                                                                     </div>
                                                                     <div class="smb-section__body is-layout-constrained wp-block-section-is-layout-constrained">
                                                                         <div class="wp-block-group thd_top__recruit__content is-layout-constrained wp-block-group-is-layout-constrained">
-                                                                            <h3 class="wp-block-heading">新しいライフスタイルを生む仕事</h3>
-                                                                            <p>新しいライフスタイルを創る TRANSIT Group は、一緒に成長できるメンバーを募集しています。私たちと一緒にさまざまな国、都市、人々に刺激を受けながら、これまでなかった文化を持ち込み、発展させませんか？</p>
+                                                                            <!-- <h3 class="wp-block-heading">新しいライフスタイルを生む仕事</h3> -->
+                                                                            <!-- <p>新しいライフスタイルを創る TRANSIT Group は、一緒に成長できるメンバーを募集しています。私たちと一緒にさまざまな国、都市、人々に刺激を受けながら、これまでなかった文化を持ち込み、発展させませんか？</p> -->
                                                                             <div class="wp-block-snow-monkey-blocks-buttons smb-buttons is-content-justification-right is-layout-flex wp-container-snow-monkey-blocks-buttons-is-layout-6 wp-block-buttons-is-layout-flex">
                                                                                 <div class="wp-block-snow-monkey-blocks-btn smb-btn-wrapper is-style-text thd_mod-arw__link --large">
                                                                                     <a class="smb-btn" href="adoption.html">
@@ -3668,7 +3668,7 @@
                         <button class="toggle-btn">＋</button>
                         </div>
                                 <div class="accordion-content">
-                                    <a href="company/message.html" class="index-more">-グループCEOメッセージ</a>
+                                    <a href="company/message.html" class="index-more">-グループ代表挨拶</a>
                                     <a href="company/mission.html" class="index-more">-グループミッション・経営理念</a>
                                     <a href="company/summary.html" class="index-more">-会社概要</a>
                                     <a href="company/partnar.html" class="index-more">-提携先企業一覧</a>
