--- a/adoption.html
+++ b/adoption.html
@@ -50,7 +50,7 @@
                             <button class="toggle-btn">＋</button>
                             </div>
                                     <div class="accordion-content">
-                                        <a href="company/message.html" class="index-more">-グループCEOメッセージ</a>
+                                        <a href="company/message.html" class="index-more">-グループ代表挨拶</a>
                                         <a href="company/mission.html" class="index-more">-グループミッション・経営理念</a>
                                         <a href="company/summary.html" class="index-more">-会社概要</a>
                                         <a href="company/partnar.html" class="index-more">-提携先企業一覧</a>
@@ -73,7 +73,7 @@
                     <ul>
                         <li>
                             <div class="accordion">
-                            <a class="index-text"  href="adoption.html">● 採用情報 <span class="index-text-english">Careers</span>
+                            <a class="index-text"  href="adoption.html">● 採用情報 <span class="index-text-english">Recruit</span>
                             </a>
                             <button class="toggle-btn">＋</button>
                         </div>
@@ -195,9 +195,9 @@
                 <span class="m-h2ttl--ja">会社を知る</span>
                 <span class="m-h2ttl--en">About Company</span>
               </h2>
-              <p class="m-txt u-fw--bold u-fs--l">グループ各社のビジョンや特長について<br>ご紹介します。</p>
+              <p class="m-txt u-fw--bold u-fs--l">リライトホールディングスの<br>経営理念についてご紹介します。</p>
               <div class="m-arrowBtn m-arrowBtn--sizeS m-arrowBtn--mt40">
-                <a class="m-arrowBtn-hover" href="company/mission.html">もっと見る</a>
+                <a class="m-arrowBtn-hover" href="adoption/about-company.html">もっと見る</a>
               </div>
             </div>
           </div>
@@ -544,7 +544,7 @@
             <button class="toggle-btn">＋</button>
             </div>
                     <div class="accordion-content">
-                        <a href="company/message.html" class="index-more">-グループCEOメッセージ</a>
+                        <a href="company/message.html" class="index-more">-グループ代表挨拶</a>
                         <a href="company/mission.html" class="index-more">-グループミッション・経営理念</a>
                         <a href="company/summary.html" class="index-more">-会社概要</a>
                         <a href="company/partnar.html" class="index-more">-提携先企業一覧</a>
