--- a/adoption/part.html
+++ b/adoption/part.html
@@ -72,7 +72,7 @@
                 <ul>
                     <li>
                         <div class="accordion">
-                        <a class="index-text"  href="../adoption.html">● 採用情報 <span class="index-text-english">Careers</span>
+                        <a class="index-text"  href="../adoption.html">● 採用情報 <span class="index-text-english">Recruit</span>
                         </a>
                         <button class="toggle-btn">＋</button>
                     </div>
