--- a/company/message.html
+++ b/company/message.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
     rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
-    <title>CEO メッセージ</title>
+    <title> グループ代表挨拶</title>
     <link rel="icon" href="../img/Rewrite_logo_only.png" type="image/png">
     </head>
 <body>
@@ -49,7 +49,7 @@
                         <button class="toggle-btn">＋</button>
                         </div>
                                 <div class="accordion-content">
-                                    <a href="../company/message.html" class="index-more">-グループCEOメッセージ</a>
+                                    <a href="../company/message.html" class="index-more">-グループ代表挨拶</a>
                                     <a href="../company/mission.html" class="index-more">-グループミッション・経営理念</a>
                                     <a href="../company/summary.html" class="index-more">-会社概要</a>
                                     <a href="../company/partnar.html" class="index-more">-提携先企業一覧</a>
@@ -72,7 +72,7 @@
                 <ul>
                     <li>
                         <div class="accordion">
-                        <a class="index-text"  href="../adoption.html">採用情報 <span class="index-text-english">Careers</span>
+                        <a class="index-text"  href="../adoption.html">採用情報 <span class="index-text-english">Recruit</span>
                         </a>
                         <button class="toggle-btn">＋</button>
                     </div>
@@ -107,7 +107,7 @@
         <div class="m-kv m-kv--message">
           <div class="m-kv__inner">
             <h1 class="m-kv__ttl">
-              <span class="m-kv__ttl--ja">グループCEOメッセージ</span>
+              <span class="m-kv__ttl--ja">グループ代表挨拶</span>
               <span class="m-kv__ttl--en">Top Message</span>
             </h1>
           </div>
@@ -124,7 +124,7 @@
               <a href="/company/">企業情報</a>
             </li>
             <li class="m-breadcrumb__listItem">
-              <a href="/company/message/">グループCEOメッセージ</a>
+              <a href="/company/message/">グループ代表挨拶</a>
             </li>
           </ul>
         </div>
@@ -165,7 +165,7 @@
                 <div class="l-sectionLv2">
                   <p class="m-txt u-tar">株式会社リライトホールディングス</p>
                   <p class="m-txt u-tar">
-                    代表取締役 CEO　<img loading="lazy" decoding="async" class="u-width--auto u-vaSub" src="" alt="広永 勝太">
+                    代表取締役　<img loading="lazy" decoding="async" class="u-width--auto u-vaSub" src="" alt="広永 勝太">
                   </p>
                   <p class="m-txt u-tar">
                     代表取締役　<img loading="lazy" decoding="async" class="u-width--auto u-vaSub" src="" alt="西村 佳晃">
@@ -203,7 +203,7 @@
                 <button class="toggle-btn">＋</button>
                 </div>
                         <div class="accordion-content">
-                            <a href="../company/message.html" class="index-more">-グループCEOメッセージ</a>
+                            <a href="../company/message.html" class="index-more">-グループ代表挨拶</a>
                             <a href="../company/mission.html" class="index-more">-グループミッション・経営理念</a>
                             <a href="../company/summary.html" class="index-more">-会社概要</a>
                             <a href="../company/partnar.html" class="index-more">-提携先企業一覧</a>
