--- a/company/summary.html
+++ b/company/summary.html
@@ -49,7 +49,7 @@
                         <button class="toggle-btn">＋</button>
                         </div>
                                 <div class="accordion-content">
-                                    <a href="../company/message.html" class="index-more">-グループCEOメッセージ</a>
+                                    <a href="../company/message.html" class="index-more">-グループ代表挨拶</a>
                                     <a href="../company/mission.html" class="index-more">-グループミッション・経営理念</a>
                                     <a href="../company/summary.html" class="index-more">-会社概要</a>
                                     <a href="../company/partnar.html" class="index-more">-提携先企業一覧</a>
@@ -72,7 +72,7 @@
                 <ul>
                     <li>
                         <div class="accordion">
-                        <a class="index-text"  href="../adoption.html">採用情報 <span class="index-text-english">Careers</span>
+                        <a class="index-text"  href="../adoption.html">採用情報 <span class="index-text-english">Recruit</span>
                         </a>
                         <button class="toggle-btn">＋</button>
                     </div>
@@ -134,7 +134,12 @@
           <li class="p-profile__listItem">
             <p class="p-profile__listTtl">会社名</p>
             <p class="p-profile__listTxt">株式会社リライトホールディングス</p>
+            <p class="p-profile__listTxt">REWRITE HOLDINGS INC.</p>
           </li>
+          <!-- <li class="p-profile__listItem">
+            <p class="p-profile__listTtl">会社名</p>
+            <p class="p-profile__listTxt">株式会社リライトホールディングス</p>
+          </li> -->
           <li class="p-profile__listItem">
             <p class="p-profile__listTtl">設立</p>
             <p class="p-profile__listTxt">2023年10月18日</p>
@@ -144,11 +149,17 @@
             <p class="p-profile__listTxt">700万円</p>
           </li>
           <li class="p-profile__listItem">
+            <p class="p-profile__listTtl">事業内容</p>
+            <p class="p-profile__listTxt">グループ全体経営統括</p>
+            <p class="p-profile__listTxt">企業インキュベーション</p>
+            <p class="p-profile__listTxt">経営人材育成事業</p>
+          </li>
+          <li class="p-profile__listItem">
             <p class="p-profile__listTtl">役員</p>
             <div class="p-profile__listTxt">
               <ul class="p-profile__listChild">
                 <li class="p-profile__listChildItem">
-                  <p class="p-profile__listChildPosition">代表取締役 CEO</p>
+                  <p class="p-profile__listChildPosition">代表取締役</p>
                   <p class="p-profile__listChildName">広永 勝太</p>
                 </li>
                 <li class="p-profile__listChildItem">
@@ -197,6 +208,10 @@
                 </li> -->
               </ul>
             </div>
+          </li>
+          <li class="p-profile__listItem">
+            <p class="p-profile__listTtl">顧問税理士</p>
+            <p class="p-profile__listTxt">リライト公認会計士・税理士事務所</p>
           </li>
           <li class="p-profile__listItem">
             <p class="p-profile__listTtl">本社</p>
@@ -262,7 +277,7 @@
                 <button class="toggle-btn">＋</button>
                 </div>
                         <div class="accordion-content">
-                            <a href="../company/message.html" class="index-more">-グループCEOメッセージ</a>
+                            <a href="../company/message.html" class="index-more">-グループ代表挨拶</a>
                             <a href="../company/mission.html" class="index-more">-グループミッション・経営理念</a>
                             <a href="../company/summary.html" class="index-more">-会社概要</a>
                             <a href="../company/partnar.html" class="index-more">-提携先企業一覧</a>
