--- a/contact/sales.html
+++ b/contact/sales.html
@@ -45,7 +45,7 @@
                             <button class="toggle-btn">＋</button>
                             </div>
                                     <div class="accordion-content">
-                                        <a href="../company/message.html" class="index-more">-グループCEOメッセージ</a>
+                                        <a href="../company/message.html" class="index-more">-グループ代表挨拶</a>
                                         <a href="../company/mission.html" class="index-more">-グループミッション・経営理念</a>
                                         <a href="../company/summary.html" class="index-more">-会社概要</a>
                                         <a href="../company/partnar.html" class="index-more">-提携先企業一覧</a>
@@ -68,7 +68,7 @@
                     <ul>
                         <li>
                             <div class="accordion">
-                            <a class="index-text"  href="../adoption.html">採用情報<span class="index-text-english"> Careers</span>
+                            <a class="index-text"  href="../adoption.html">採用情報<span class="index-text-english"> Recruit</span>
                             </a>
                             <button class="toggle-btn">＋</button>
                         </div>
@@ -199,7 +199,7 @@
               <button class="toggle-btn">＋</button>
               </div>
                       <div class="accordion-content">
-                          <a href="../company/message.html" class="index-more">-グループCEOメッセージ</a>
+                          <a href="../company/message.html" class="index-more">-グループ代表挨拶</a>
                           <a href="../company/mission.html" class="index-more">-グループミッション・経営理念</a>
                           <a href="../company/summary.html" class="index-more">-会社概要</a>
                           <a href="../company/partnar.html" class="index-more">-提携先企業一覧</a>
