--- a/adoption.html
+++ b/adoption.html
@@ -36,13 +36,13 @@
 
             <nav class="header-under">
                 <div class="index">
-                    <ul class="top">
+                    <ul class="top index-main">
                         <li>
                             <a class="index-text" href="index.html">トップ <span class="index-text-english"> Top</span>
                                 </a>
                         </li>
                     </ul>
-                    <ul>
+                    <ul class="index-main">
                         <li>
                             <div class="accordion">
                             <a class="index-text" href="company.html">企業情報 <span class="index-text-english">Company Info</span>
@@ -57,7 +57,7 @@
                                       </div>
                         </li>
                     </ul>
-                    <ul>
+                    <ul class="index-main">
                         <li>
                             <div class="accordion">
                             <a class="index-text"  href="business.html">事業内容 <span class="index-text-english">Business Description </span>
@@ -70,7 +70,7 @@
                               </div>
                         </li>
                     </ul>
-                    <ul>
+                    <ul class="index-main">
                         <li>
                             <div class="accordion">
                             <a class="index-text"  href="adoption.html">● 採用情報 <span class="index-text-english">Recruit</span>
@@ -84,7 +84,7 @@
                                   </div>
                         </li>
                     </ul>
-                    <ul>
+                    <ul class="index-main">
                         <li>
                             <div class="accordion">
                             <a class="index-text"  href="contact.html">お問い合わせ <span class="index-text-english">Contact</span></a>
