--- a/company/message.html
+++ b/company/message.html
@@ -35,13 +35,13 @@
 
         <nav class="header-under">
             <div class="index">
-                <ul class="top">
+                <ul class="top index-main">
                     <li>
                         <a class="index-text" href="../index.html">ホーム <span class="index-text-english"> Home</span>
                             </a>
                     </li>
                 </ul>
-                <ul>
+               <ul class="index-main">
                     <li>
                         <div class="accordion">
                         <a class="index-text" href="../company.html">● 企業情報 <span class="index-text-english">Company Info</span>
@@ -56,7 +56,7 @@
                                   </div>
                     </li>
                 </ul>
-                <ul>
+               <ul class="index-main">
                     <li>
                         <div class="accordion">
                         <a class="index-text"  href="../business.html">事業内容 <span class="index-text-english">Business Description </span>
@@ -69,7 +69,7 @@
                           </div>
                     </li>
                 </ul>
-                <ul>
+               <ul class="index-main">
                     <li>
                         <div class="accordion">
                         <a class="index-text"  href="../adoption.html">採用情報 <span class="index-text-english">Recruit</span>
@@ -83,7 +83,7 @@
                               </div>
                     </li>
                 </ul>
-                <ul>
+               <ul class="index-main">
                     <li>
                         <div class="accordion">
                         <a class="index-text"  href="../contact.html">お問い合わせ <span class="index-text-english">Contact</span></a>
@@ -166,12 +166,6 @@
                   <p class="m-txt u-tar">株式会社リライトホールディングス</p>
                   <p class="m-txt u-tar">
                     代表取締役　<img loading="lazy" decoding="async" class="u-width--auto u-vaSub" src="" alt="広永 勝太">
-                  </p>
-                  <p class="m-txt u-tar">
-                    代表取締役　<img loading="lazy" decoding="async" class="u-width--auto u-vaSub" src="" alt="西村 佳晃">
-                  </p>
-                  <p class="m-txt u-tar">
-                    代表取締役　<img loading="lazy" decoding="async" class="u-width--auto u-vaSub" src="" alt="大森 健一">
                   </p>
                 </div>
               </div>
