--- a/contact/cooperation.html
+++ b/contact/cooperation.html
@@ -31,13 +31,13 @@
     
             <nav class="header-under">
                 <div class="index">
-                    <ul class="top">
+                    <ul class="top index-main">
                         <li>
                             <a class="index-text" href="../index.html">ホーム <span class="index-text-english"> Home</span>
                                 </a>
                         </li>
                     </ul>
-                    <ul>
+         <ul class="index-main">
                         <li>
                             <div class="accordion">
                             <a class="index-text" href="../company.html">企業情報 <span class="index-text-english">Company Info</span>
@@ -52,7 +52,7 @@
                                       </div>
                         </li>
                     </ul>
-                    <ul>
+         <ul class="index-main">
                         <li>
                             <div class="accordion">
                             <a class="index-text"  href="../business.html">事業内容 <span class="index-text-english">Business Description </span>
@@ -65,7 +65,7 @@
                               </div>
                         </li>
                     </ul>
-                    <ul>
+         <ul class="index-main">
                         <li>
                             <div class="accordion">
                             <a class="index-text"  href="../adoption.html">採用情報<span class="index-text-english"> Recruit</span>
@@ -79,7 +79,7 @@
                                   </div>
                         </li>
                     </ul>
-                    <ul>
+         <ul class="index-main">
                         <li>
                             <div class="accordion">
                             <a class="index-text"  href="../contact.html">お問い合わせ <span class="index-text-english">Contact</span></a>
