--- a/index.html
+++ b/index.html
@@ -3049,6 +3049,7 @@
         <link rel="stylesheet" href="css/transit2.css">
         <link rel="stylesheet" href="css/transit3.css">
         <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/index.css">
     </head>
     <body class="home page-template page-template-page-templates page-template-one-column page-template-page-templatesone-column-php page page-id-35 wp-custom-logo l-body--one-column l-body" id="body" data-has-sidebar="false" data-is-full-template="false" data-is-slim-width="false" data-header-layout="1row" ontouchstart="">
         <div id="page-start"></div>
@@ -3140,13 +3141,13 @@
         
                     <nav class="header-under">
                         <div class="index">
-                            <ul class="top">
+                            <ul class="top index-main">
                                 <li>
                                     <a class="index-text" href="index.html">ホーム <span class="index-text-english">Home</span>
                                         </a>
                                 </li>
                             </ul>
-                            <ul>
+                            <ul class="index-main">
                                 <li>
                                     <div class="accordion">
                                     <a class="index-text" href="company.html">企業情報 <span class="index-text-english">Company Info</span>
@@ -3161,7 +3162,7 @@
                                               </div>
                                 </li>
                             </ul>
-                            <ul>
+                            <ul class="index-main">
                                 <li>
                                     <div class="accordion">
                                     <a class="index-text"  href="business.html">事業内容 <span class="index-text-english">Business Description </span>
@@ -3174,7 +3175,7 @@
                                       </div>
                                 </li>
                             </ul>
-                            <ul>
+                            <ul class="index-main">
                                 <li>
                                     <div class="accordion">
                                     <a class="index-text"  href="adoption.html">採用情報 <span class="index-text-english">Recruit</span>
@@ -3188,7 +3189,7 @@
                                           </div>
                                 </li>
                             </ul>
-                            <ul>
+                            <ul class="index-main">
                                 <li>
                                     <div class="accordion">
                                     <a class="index-text"  href="contact.html">お問い合わせ <span class="index-text-english">Contact</span></a>
@@ -3312,7 +3313,7 @@
                                                         </a>
                                                     </div>
                                                 </div>
-                                                <div class="wp-block-snow-monkey-blocks-section smb-section smb-section--fit thd_top__news js-inview">
+                                                <div class="wp-block-snow-monkey-blocks-section smb-section smb-section--fit thd_top__news js-inview news-background">
                                                     <div class="smb-section__inner">
                                                         <div class="c-container">
                                                             <div class="smb-section__contents-wrapper">
@@ -3453,13 +3454,14 @@
                                                                                         <div class="smb-section__contents-wrapper">
                                                                                             <div class="smb-section__header">
                                                                                                 <img src="img/Rewrite_logo_only.png" alt="" height="150px" class="vision-img">
-                                                                                                <h2 class="smb-section__title">2035 GROUP VISION</h2>
+                                                                                                <h2 class="smb-section__title">GROUP VISION</h2>
                                                                                                 <div class="smb-section__lede-wrapper">
-                                                                                                    <div class="smb-section__lede">グループ ビジョン</div>
+                                                                                                    <div class="smb-section__lede">グループビジョン</div>
                                                                                                 </div>
                                                                                             </div>
                                                                                             <div class="smb-section__body is-layout-constrained wp-block-section-is-layout-constrained">
-                                                                                                <h3 class="wp-block-heading">年商100億円ステージへ</h3>
+                                                                                                <h3 class="wp-block-heading">REWRITE QUALITY</h3>
+                                                                                                <p class="vision-message-innner">Perfected for professionals.<br> Trusted by clients.</p>
                                                                                                 <!-- <p>トランジットグループは、クリエイティブ、オペレーション、イベント、マネージメントサポートといった様々なプロフェッショナル集団が連動し、“ワクワク体験”ができる「遊び場」を提供。新しいライフスタイルを創り、文化やコミュニティが活性化する事で、社会にポジティブな変化をもたらす未来を目指しています。</p> -->
                                                                                                 <div class="wp-block-snow-monkey-blocks-buttons smb-buttons is-content-justification-right is-layout-flex wp-container-snow-monkey-blocks-buttons-is-layout-2 wp-block-buttons-is-layout-flex">
                                                                                                     <div class="wp-block-snow-monkey-blocks-btn smb-btn-wrapper is-style-text thd_mod-arw__link --large">
