--- a/adoption.html
+++ b/adoption.html
@@ -303,7 +303,7 @@
     </li>
   </ul> -->
   
-          <div id="faq" class="p-recruit__faq">
+          <!-- <div id="faq" class="p-recruit__faq">
             <div class="p-recruit__faqInner">
               <h2 class="m-h2ttl">
                 <span class="m-h2ttl--ja">よくあるご質問</span>
@@ -507,7 +507,7 @@
                 
               </ul>
             </div>
-          </div>
+          </div> -->
           <div class="m-arrowBtn m-arrowBtn--sizeL m-arrowBtn--mAuto m-arrowBtn--mt40">
             <a class="m-arrowBtn-hover" href="/inquiry/form03">
               <span class="m-arrowBtn-inline">
