--- a/adoption/about-company.html
+++ b/adoption/about-company.html
@@ -179,7 +179,7 @@
                   </div>
                   <div class="m-circleBtn small arrow-black m-group__btn"><span></span></div>
                 </a>
-              </li>
+              <!-- </li>
               <li class="m-group__item">
                 <a class="m-circleBtn-element" href="/business/group/sfp_holdings/">
                   <div class="m-group__logo m-group__logo--sfp">
@@ -259,7 +259,7 @@
                   </div>
                   <div class="m-circleBtn small arrow-black m-group__btn"><span></span></div>
                 </a>
-              </li>
+              </li> -->
   <!--
               <li class="m-group__item">
                 <a class="m-circleBtn-element" href="">
@@ -277,7 +277,7 @@
                 </a>
               </li>
   -->
-              <li class="m-group__item">
+              <!-- <li class="m-group__item">
                 <a class="m-circleBtn-element" href="/business/group/yuzuru/">
                   <div class="m-group__logo m-group__logo--yuzuru">
                     <img loading="lazy" decoding="async" src="/assets/img/recruit/a-company/a-company_logo08.webp" alt="">
@@ -393,7 +393,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
   
     <!-- companyList -->
     <div class="l-block l-block--bg">
