--- a/adoption.html
+++ b/adoption.html
@@ -242,7 +242,7 @@
               </h2>
               <p class="m-txt u-fw--bold u-fs--l">業務内容や「1日の仕事の流れ」をご紹介します。</p>
               <div class="m-arrowBtn m-arrowBtn--sizeS m-arrowBtn--mt40">
-                <a class="m-arrowBtn-hover" href="/recruit/a-job/">もっと見る</a>
+                <a class="m-arrowBtn-hover" href="adoption/about-work.html">もっと見る</a>
               </div>
             </div>
           </div>
@@ -509,7 +509,7 @@
             </div>
           </div> -->
           <div class="m-arrowBtn m-arrowBtn--sizeL m-arrowBtn--mAuto m-arrowBtn--mt40">
-            <a class="m-arrowBtn-hover" href="/inquiry/form03">
+            <a class="m-arrowBtn-hover" href="contact.html">
               <span class="m-arrowBtn-inline">
                 <span class="m-contact-icon"><img loading="lazy" decoding="async" src="/assets/img/common/contact_icon.svg" alt=""></span>
                 採用に関するお問い合わせ
