--- a/cpa.html
+++ b/cpa.html
@@ -49,7 +49,7 @@
                    <ul class="index-main">
                         <li>
                             <div class="accordion">
-                            <a class="index-text" href="../company.html">企業情報 <span class="index-text-english">Company Info</span>
+                            <a class="index-text" href="../company.html">会社情報 <span class="index-text-english">Company</span>
                             </a>
                             <button class="toggle-btn">＋</button>
                             </div>
@@ -64,7 +64,7 @@
                    <ul class="index-main">
                         <li>
                             <div class="accordion">
-                            <a class="index-text"  href="../business.html">事業内容 <span class="index-text-english">Business Description </span>
+                            <a class="index-text"  href="../business.html">事業内容 <span class="index-text-english">Business</span>
                             </a>
                             <button class="toggle-btn">＋</button>
                        </div>
@@ -129,7 +129,7 @@
         <ul class="footer-index">
             <li>
                 <div class="accordion">
-                <a class="index-text" href="../company.html">企業情報 <span class="index-text-english">Company Info</span>
+                <a class="index-text" href="../company.html">会社情報 <span class="index-text-english">Company</span>
                 </a>
                 <button class="toggle-btn">＋</button>
                 </div>
@@ -144,7 +144,7 @@
         <ul class="footer-index">
             <li>
                 <div class="accordion">
-                <a class="index-text"  href="../business.html">事業内容 <span class="index-text-english">Business Description </span>
+                <a class="index-text"  href="../business.html">事業内容 <span class="index-text-english">Business</span>
                 </a>
                 <button class="toggle-btn">＋</button>
            </div>
